kubernetes/overlays/prod/microservice-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-microservice
spec:
  replicas: 3
