kubernetes/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-order-ingress
spec:
  rules:
    - host: customer-order.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: app-microservice
                port:
                  number: 80
